src/main/kubernetes/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: e0dce041e61a9fc8607428b7d138cdee013d111f
    app.quarkus.io/build-timestamp: 2022-07-16 - 14:09:15 +0000
  labels:
    app.kubernetes.io/name: jepd
    app.kubernetes.io/version: 1.0.0
  name: jepd
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: jepd
    app.kubernetes.io/version: 1.0.0
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: e0dce041e61a9fc8607428b7d138cdee013d111f
    app.quarkus.io/build-timestamp: 2022-07-16 - 14:09:15 +0000
  labels:
    app.kubernetes.io/name: jepd
    app.kubernetes.io/version: 1.0.0
  name: jepd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jepd
      app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: e0dce041e61a9fc8607428b7d138cdee013d111f
        app.quarkus.io/build-timestamp: 2022-07-16 - 14:09:15 +0000
      labels:
        app.kubernetes.io/name: jepd
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/anasandbox/jepd:1.0.0
          imagePullPolicy: Always
          name: jepd
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
      volumes:
        - name: my-volume
          persistentVolumeClaim:
            claimName: data
            readOnly: false
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.quarkus.io/commit-id: e0dce041e61a9fc8607428b7d138cdee013d111f
    app.quarkus.io/build-timestamp: 2022-07-16 - 14:09:15 +0000
  labels:
    app.kubernetes.io/name: jepd
    app.kubernetes.io/version: 1.0.0
  name: jepd
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: jepd
                port:
                  name: http
            path: /
            pathType: Prefix
